Cleanup PCETriggeredInitialSyncProcedureTest
Remove useless override and use List.of() instead of
Collections.emptyList().

Change-Id: I505904047331d0a7f862b825d20b3c323cbd94f1
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>